# Rust-Web-Development

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
db/: password.example.txt
frontend/: Cargo.toml  index.css  index.html
frontend/src/: cookie.rs  finder.rs  joke.rs  main.rs  question.rs
migrations/: 20240506012129_tables.down.sql  20240506012129_tables.up.sql
rustproject/: Cargo.toml
rustproject/src/: main.rs  question.rs
src/: answer.rs  api.rs  main.rs  question.rs  store.rs
