workspace = { members = ["frontend"] }
[package]
name = "rustproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "migrate", "runtime-tokio-rustls"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["env-filter", "fmt"] }
tower-http = { version = "0.5.0", features = ["trace", "full"] }
